@@ -5,7 +5,6 @@ import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import com.bakdata.conquery.models.datasets.concepts.select.Select;
 import com.bakdata.conquery.models.query.Visitable;
 import com.bakdata.conquery.sql.conversion.Converter;
 import com.bakdata.conquery.sql.conversion.NodeConverter;
@@ -14,43 +13,54 @@ import com.bakdata.conquery.sql.conversion.cqelement.CQDateRestrictionConverter;
 import com.bakdata.conquery.sql.conversion.cqelement.CQNegationConverter;
 import com.bakdata.conquery.sql.conversion.cqelement.CQOrConverter;
 import com.bakdata.conquery.sql.conversion.cqelement.concept.CQConceptConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.BigMultiSelectFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.DateDistanceFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.FilterConversions;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.FilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.MultiSelectFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.NumberFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.SingleSelectFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.filter.SumFilterConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.DateDistanceSelectConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.ExistsSelectConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.FirstValueSelectConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.SelectConversions;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.SelectConverter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.select.SumSelectConverter;
 import com.bakdata.conquery.sql.conversion.model.QueryStepTransformer;
 import com.bakdata.conquery.sql.conversion.query.ConceptQueryConverter;
+import com.bakdata.conquery.sql.conversion.supplier.DateNowSupplier;
 import com.bakdata.conquery.sql.conversion.supplier.SystemDateNowSupplier;
+import com.bakdata.conquery.sql.execution.SqlCDateSetParser;
 import org.jooq.DSLContext;
 
 public interface SqlDialect {
 
-	SystemDateNowSupplier DEFAULT_DATE_NOW_SUPPLIER = new SystemDateNowSupplier();
+	SystemDateNowSupplier SYSTEM_DATE_NOW_SUPPLIER = new SystemDateNowSupplier();
 
-	SqlFunctionProvider getFunction();
+	SqlFunctionProvider getFunctionProvider();
+
+	IntervalPacker getIntervalPacker();
+
+	SqlDateAggregator getDateAggregator();
 
 	List<NodeConverter<? extends Visitable>> getNodeConverters();
+
+	DSLContext getDSLContext();
+
+	SqlCDateSetParser getCDateSetParser();
+
+	default DateNowSupplier getDateNowSupplier() {
+		return SYSTEM_DATE_NOW_SUPPLIER;
+	}
+
+	default boolean requiresAggregationInFinalStep() {
+		return true;
+	}
+
+	default List<NodeConverter<? extends Visitable>> getDefaultNodeConverters() {
+		return List.of(
+				new CQDateRestrictionConverter(),
+				new CQAndConverter(),
+				new CQOrConverter(),
+				new CQNegationConverter(),
+				new CQConceptConverter(getFunctionProvider()),
+				new ConceptQueryConverter(new QueryStepTransformer(getDSLContext()))
+		);
+	}
 
 	private static <R, C extends Converter<?, R, ?>> List<C> customize(List<C> defaults, List<C> substitutes) {
 		Map<Class<?>, C> substituteMap = getSubstituteMap(substitutes);
 		return defaults.stream()
 					   .map(converter -> substituteMap.getOrDefault(converter.getConversionClass(), converter))
-					   .collect(Collectors.toList());
+					   .toList();
 	}
-
-	List<SelectConverter<? extends Select>> getSelectConverters();
-
-	DSLContext getDSLContext();
 
 	private static <R, C extends Converter<?, R, ?>> Map<Class<?>, C> getSubstituteMap(List<C> substitutes) {
 		return substitutes.stream()
@@ -60,40 +70,4 @@ public interface SqlDialect {
 						  ));
 	}
 
-	default List<NodeConverter<? extends Visitable>> getDefaultNodeConverters() {
-		return List.of(
-				new CQDateRestrictionConverter(),
-				new CQAndConverter(),
-				new CQOrConverter(),
-				new CQNegationConverter(),
-				new CQConceptConverter(new FilterConversions(getFilterConverters()), new SelectConversions(getSelectConverters())),
-				new ConceptQueryConverter(new QueryStepTransformer(getDSLContext()))
-		);
-	}
-
-	default List<SelectConverter<? extends Select>> customizeSelectConverters(List<SelectConverter<?>> substitutes) {
-		return customize(getDefaultSelectConverters(), substitutes);
-	}
-
-	List<FilterConverter<?, ?>> getFilterConverters();
-
-	default List<FilterConverter<?, ?>> getDefaultFilterConverters() {
-		return List.of(
-				new DateDistanceFilterConverter(DEFAULT_DATE_NOW_SUPPLIER),
-				new BigMultiSelectFilterConverter(),
-				new MultiSelectFilterConverter(),
-				new SingleSelectFilterConverter(),
-				new NumberFilterConverter(),
-				new SumFilterConverter()
-		);
-	}
-
-	default List<SelectConverter<? extends Select>> getDefaultSelectConverters() {
-		return List.of(
-				new FirstValueSelectConverter(),
-				new DateDistanceSelectConverter(DEFAULT_DATE_NOW_SUPPLIER),
-				new ExistsSelectConverter(),
-				new SumSelectConverter()
-		);
-	}
 }
